:sparkles: feat(arike): added facility enitity and repo